--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -5,57 +5,143 @@ import graphic from "../images/graphics/graphic-1.webp";
 ---
 
 <section class="">
-  <div class="bg-purple pt-6">
+  <div class="bg-purple">
     <div class="container container-large">
       <div class="padding-global relative overflow-visible">
-        <div class="grid grid-cols-5 gap-8 py-16">
-          <div
-            class="col-span-5 lg:col-span-2 bg-purple flex items-center md:px-8 lg:px-0"
-          >
-            <Image
-              src={graphic}
-              class="rounded-xl"
-              height="500"
-              width="500"
-              alt="ux dev engineering graphic"
-            />
-          </div>
-          <div class="col-span-5 lg:col-span-3 bg-purple py-6 md:px-8">
-            <!-- content -->
-            <div class="flex flex-col gap-4">
-              <h5>My Philosophy & Process</h5>
-              <h2>
-                Code makes things work, <br /> empathy makes them feel right
-              </h2>
-              <div class="mb-4">
-                <p>
-                  As a UX Engineer, my work spans the realms of design,
-                  development, and product strategy. I specialize in steering
-                  new creations from the initial concept stage through to
-                  completion, as well as refining existing products with best
-                  practices and data-driven insights.
-                </p>
+        <div class="padding-extra">
+          <div class="grid grid-cols-1 xl:grid-cols-2 pt-20 py-16 gap-8">
+            <div class="col-span-1 bg-purple flex items-center">
+              <Image
+                src={graphic}
+                class="rounded-xl"
+                height="500"
+                width="500"
+                alt="ux dev engineering graphic"
+              />
+            </div>
+            <div class="col-span-1 bg-purple py-6">
+              <!-- content -->
+              <div class="flex flex-col gap-4">
+                <h5>How I Can Help</h5>
+                <h2 class="">5 Reasons Your Team Should Hire a UX Engineer</h2>
+                <div>
+                  <p>
+                    My work as a UX engineer spans the realms of design,
+                    development, and product strategy. Here's what a good UX
+                    engineer can provide:
+                  </p>
+                  <p>
+                    <span class="font-bold"
+                      >1. A Bridge Between Design and Dev:
+                    </span>
+                    UX engineers are the essential link between design and development
+                    teams. We translate design concepts into technical requirements
+                    (and vice versa) while improving cross-team communication and
+                    collaboration.
+                  </p>
+                  <p>
+                    <span class="font-bold">2. Rapid Prototyping:</span>
+                    A UX engineer on the design team can provide quick proof-of-concept
+                    prototypes, speeding up testing and iteration.
+                  </p>
+                  <p>
+                    <span class="font-bold"
+                      >3. Precision in Implementation:</span
+                    >
+                    We can accurately translate complex design ideas into fully functional
+                    interfaces, maintaining the original design vision while ensuring
+                    a seamless user experience.
+                  </p>
+                  <p>
+                    <span class="font-bold">4. Data-Driven Design:</span>
+                    A UX engineer with a background in Python and data analysis (like
+                    myself) can use data to inform design decisions, ensuring an
+                    optimized final product.
+                  </p>
+                  <p>
+                    <span class="font-bold">5. Agility in Development:</span>
+                    For crucial sprints, UX engineers can shift into full-time dev
+                    mode and provide a much-needed extra set of hands.
+                  </p>
 
-                <p>
-                  My process begins by using my UX design intuition to spot
-                  areas of friction, confusion, and overlooked opportunities.
-                  Next, I delve deeply into the data, analyzing user engagement
-                  metrics and conversion rates to validate my initial
-                  observations and form new hypotheses. Armed with these
-                  insights, I propose and then personally implement the
-                  necessary changes to the front end, making sure that all KPIs
-                  are tracked properly for use in performance retrospectives and
-                  future optimizations.
-                </p>
+                  <!--
+              <div class="flex flex-col gap-4">
+                <h5>My Process</h5>
+                <h2>What does a UX Engineer do?</h2>
 
-                <p>
-                  This comprehensive strategy not only elevates user experience
-                  but also yields concrete business outcomes, guaranteeing that
-                  every product surpasses both customer expectations and
-                  organizational objectives.
-                </p>
-                <div class="mt-8">
-                  <Button link="/contact" type="primary" text="Get in Touch" />
+                <div class="mb-4">
+                  <p>
+                    My work as a UX Engineer spans the realms of design,
+                    development, and product strategy. I specialize in steering
+                    new creations from the initial concept stage through to
+                    completion, as well as refining existing products with best
+                    practices and data-driven insights.
+                  </p>
+
+                  <p>Here's my five-step process:</p>
+
+                  <p>
+                    <span class="font-bold">Step 1:</span> Understand the business
+                    objectives and goals of the application or website.
+                  </p>
+
+                  <p>
+                    <span class="font-bold">Step 2:</span> Use design intuition to
+                    identify potential areas of friction, confusion, and overlooked
+                    opportunities.
+                  </p>
+
+                  <p>
+                    <span class="font-bold">Step 3:</span> Delve into the available
+                    data, analyzing engagement metrics and conversion rates to validate
+                    and refine my initial observations.
+                  </p>
+
+                  <p>
+                    <span class="font-bold">Step 4:</span> Propose and then personally
+                    implement the necessary changes to the front end.
+                  </p>
+
+                  <p>
+                    <span class="font-bold">Step 5:</span> Track KPIs and conversion
+                    metrics to ensure objectives are met.
+                  </p>
+                </div>
+              </div> -->
+
+                  <!-- <div class="flex flex-col gap-4">
+                <h2>
+                  Code makes things work, <br /> empathy makes them feel right.
+                </h2>
+                <div class="mb-4">
+                  <p>
+                    My work as a UX Engineer spans the realms of design,
+                    development, and product strategy. I specialize in steering
+                    new creations from the initial concept stage through to
+                    completion, as well as refining existing products with best
+                    practices and data-driven insights.
+                  </p>
+                  <p>
+                    My process begins by using my UX design intuition to spot
+                    areas of friction, confusion, and overlooked opportunities.
+                    Next, I delve deeply into the data, analyzing user
+                    engagement metrics and conversion rates to validate my
+                    initial observations and form new hypotheses. Armed with
+                    these insights, I propose and then personally implement the
+                    necessary changes to the front end, making sure that all
+                    KPIs are tracked properly for use in performance
+                    retrospectives and future optimizations.
+                  </p>
+                </div>
+              </div> -->
+
+                  <div class="mt-8">
+                    <Button
+                      link="/contact"
+                      type="primary"
+                      text="Get in Touch"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
