--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -40,7 +40,7 @@ import Button from "./Button.astro";
               rounded={true}
             />
           </div>
-          <div class="flex justify-center">
+          <div class="flex justify-center pt-8">
             <Button text="Get In Touch" type="tertiary" link="/contact" />
           </div>
         </div>
