--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -50,6 +50,7 @@ const buttonClasses = `button ${globalClasses} ${typeClasses[type]}`;
       all 1250ms cubic-bezier(0.19, 1, 0.22, 1),
       color 100ms cubic-bezier(0.19, 1, 0.22, 1);
     font-weight: 500;
+    letter-spacing: 0.5px;
   }
 
   .button-primary {
