--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,7 +9,7 @@ const { header, title, text, icon, link, classes, rounded } = Astro.props as {
   title: string;
   text: string;
   icon: any;
-  link: string;
+  link?: string;
   classes?: string;
   rounded?: boolean;
 };
@@ -21,29 +21,28 @@ const optimizedBackground = await getImage({
 const imageRounded = rounded ? "rounded-full" : "rounded-xl";
 ---
 
-<div class=`flex h-full  ${
+<div class=` h-full ${
   classes ?? ""
 }`>
-  <a href={link}>
-    <div class="py-6">
+  <a href={link} class="h-full">
+    <div class="h-full">
       <div
-        class="card px-4 py-5 pb-8 flex flex-col items-center w-full border-2 bg-slate-900 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]"
+        class="card px-4 pt-6 pb-10 flex flex-col items-center border-2 bg-slate-900 drop-shadow-[0px_0px_3px_rgba(255,255,255,0.75)] h-full"
       >
-        <div
-          class=`max-w-36 flex items-center w-full mb-4 ${imageRounded} overflow-hidden`
-        >
+        <div class=`max-w-36 flex mb-4 ${imageRounded} overflow-hidden`>
           <Image src={icon} alt="icon" width="300" height="250" />
         </div>
         <div>
-          <H3 centered="True" header={header} />
+          <H3 header={header} />
+          <!-- <h3>{header}</h3> -->
         </div>
         <div class="mb-2">
           <span class="text-base">{title}</span>
         </div>
-        <span class="text-center leading-[1.6rem]">{text}</span>
+        <span class="text-center"><p class="mb-[-4px]">{text}</p></span>
       </div>
-    </div></a
-  >
+    </div>
+  </a>
 </div>
 
 <style>
