--- a/src/components/Certification.astro
+++ b/src/components/Certification.astro
@@ -12,7 +12,7 @@ const { title, text, image } = Astro.props as Props;
 ---
 
 <div class={`mb-12`}>
-  <div class=`flex flex-col gap-4 items-center`>
+  <div class=`flex flex-col gap-4`>
     <div>
       <Image
         src={image}
@@ -22,9 +22,10 @@ const { title, text, image } = Astro.props as Props;
         class="border rounded-full"
       />
     </div>
-    <div class="flex flex-col gap-3 items-center">
-      <H3 header={title} centered="True" />
-      <p class="text-center">{text}</p>
+    <div class="flex flex-col gap-3">
+      <!-- <H3 header={title}/> -->
+      <h3>{title}</h3>
+      <p class="">{text}</p>
     </div>
   </div>
 </div>
