--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -8,7 +8,7 @@ const { centered, header, maxWidth, classes, hideBracketOnMobile } =
     hideBracketOnMobile?: boolean;
   };
 
-const center = centered ? "text-center" : "";
+const center = centered === true ? "text-center" : "";
 const hideBracket = hideBracketOnMobile ? "hidden xl:flex" : "";
 ---
 
@@ -23,9 +23,9 @@ const hideBracket = hideBracketOnMobile ? "hidden xl:flex" : "";
     <div>&gt;</div>
   </div>
 </div> -->
-<div class="flex items-center justify-center gap-2">
+<div class="flex items-center gap-2">
   <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&lt;</span>
-  <h3 class={`text-lg xl:whitespace-nowrap overflow-hidden ${center}`}>
+  <h3 class={`text-lg xl:whitespace-nowrap overflow-hidden  ${center}`}>
     {header}
   </h3>
   <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&gt;</span>
