--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,54 +8,55 @@ import { Image } from "astro:assets";
 <section>
   <div class="container container-large">
     <div class="padding-global">
-      <div
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-12 gap-6 w-full pt-8 pb-28"
-        id="header-content"
-      >
+      <div class="padding-extra">
         <div
-          class="col-span-1 lg:col-span-7 md:pr-12 flex flex-col gap-5 justify-center"
-          id="header-text"
+          class="grid grid-cols-1 lg:grid-cols-12 gap-14 w-full pt-20 md:pt-24 pb-20 md:pb-28"
+          id="header-content"
         >
-          <h1>
-            Hi! I'm Thomas. <br /> I make websites & digital applications <em
-              >better</em
-            >.
-          </h1>
+          <div
+            class="col-span-1 lg:col-span-7 flex flex-col gap-5 justify-center"
+            id="header-text"
+          >
+            <h1>
+              Hi! I'm Thomas. <br /> I make websites & digital applications <em
+                >better</em
+              >.
+            </h1>
 
-          <p>
-            As a User-Experience (UX) Engineer with over a decade of experience
-            in digital product design and development, I create seamless
-            experiences that empower users to achieve their goals without
-            friction, leading to higher customer satisfaction and increased
-            sales.
-          </p>
-          <div class="flex flex-wrap gap-4">
-            <Button text="Get in Touch" type="primary" link="/contact" />
-            <Button text="See My Work" type="secondary" link="#portfolio" />
+            <p>
+              As a User-Experience (UX) Engineer with over a decade of
+              experience in digital product design and development, I create
+              seamless experiences that empower users to achieve their goals
+              without friction, leading to higher customer satisfaction and
+              increased sales.
+            </p>
+            <div class="flex flex-wrap gap-4">
+              <Button text="Get in Touch" type="primary" link="/contact" />
+              <Button text="See My Work" type="secondary" link="#portfolio" />
+            </div>
+            <div class="text-sm uppercase flex flex-wrap gap-x-3 gap-y-2 mt-1">
+              <h6>Front-End Development</h6>
+              <span>|</span>
+              <h6>UX/UI</h6>
+              <span>|</span>
+              <h6>Product Strategy</h6>
+              <span>|</span>
+              <h6>Data Analysis</h6>
+            </div>
           </div>
-          <div class="text-sm uppercase flex flex-wrap gap-x-4 gap-y-2 mt-1">
-            <h6>Front-End Development</h6>
-            <span>|</span>
-            <h6>UX/UI</h6>
-            <span>|</span>
-            <h6>Product Strategy</h6>
-            <span>|</span>
-            <h6>Data Analysis</h6>
+          <div
+            class="col-span-1 w-3/4 md:w-1/2 lg:w-full lg:col-span-5 order-first lg:order-last"
+            id="header-image"
+          >
+            <Image
+              src={me}
+              alt="Thomas"
+              width="400"
+              height="400"
+              class="rounded-xl w-full"
+              loading="eager"
+            />
           </div>
-        </div>
-        <div
-          class="col-span-1 lg:col-span-5 order-first md:order-last"
-          id="header-image"
-        >
-          <Image
-            src={me}
-            alt="Thomas"
-            width="400"
-            height="400"
-            class="rounded-xl w-full"
-            loading="eager"
-            decoding="sync"
-          />
         </div>
       </div>
     </div>
