--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,31 +4,30 @@ import Logo from "./Logo.astro";
 import Icons from "./Icons.astro";
 ---
 
-<header class="fixed top-0 w-full nav z-50">
+<header class="w-full nav z-50">
   <nav>
     <!-- Desktop & Tablet -->
-    <div class="hidden md:flex pt-[0.8rem] pb-[0.85rem]">
+    <div class="hidden md:flex py-5">
       <div class="container container-large">
         <div class="padding-global">
-          <div class="nav-content w-full flex justify-between items-center">
-            <div><a href="/"><Logo /></a></div>
+          <div class="padding-extra">
+            <div class="nav-content w-full flex justify-between items-center">
+              <div><a href="/"><Logo /></a></div>
 
-            <div
-              class="bg-slate-900 px-8 rounded-full flex items-center gap-4 h-14 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]"
-            >
-              <div class="flex items-center gap-6">
-                <HeaderLink href="/" text="Home" />
-                <!-- <HeaderLink href="/#portfolio" text="Portfolio" /> -->
-                <HeaderLink
-                  href="/Thomas Faddegon - Resume 2024.pdf"
-                  text="Resume"
-                />
+              <div
+                class="bg-slate-900 px-8 rounded-full flex items-center gap-4 h-14 drop-shadow-[0px_0px_2px_rgba(255,255,255,0.75)]"
+              >
+                <div class="flex items-center gap-6">
+                  <HeaderLink href="/" text="Home" />
+                  <!-- <HeaderLink href="/#portfolio" text="Portfolio" /> -->
+                  <HeaderLink href="/resume" text="Resume" />
 
-                <!-- <HeaderLink href="/blog">Blog</HeaderLink> -->
-                <HeaderLink href="/contact" text="Contact" />
+                  <!-- <HeaderLink href="/blog">Blog</HeaderLink> -->
+                  <HeaderLink href="/contact" text="Contact" />
+                </div>
               </div>
+              <Icons />
             </div>
-            <Icons />
           </div>
         </div>
       </div>
@@ -86,7 +85,7 @@ import Icons from "./Icons.astro";
   </nav>
 </header>
 
-<div class="h-20 md:h-40"></div>
+<!-- <div class="h-10 bg-black"></div> -->
 
 <style>
   header {
@@ -95,7 +94,6 @@ import Icons from "./Icons.astro";
       top 0.6s,
       background-color 0.5s,
       border-color 0.5s;
-    border-bottom: 1px solid rgba(255, 255, 255, 0);
     box-shadow: 0 2px 8px rgba(var(--black), 5%);
   }
   h2 {
@@ -117,34 +115,34 @@ import Icons from "./Icons.astro";
 </style>
 
 <script>
-  const header = document.querySelector("header");
+  // const header = document.querySelector("header");
 
-  if (!header) {
-    throw new Error("No header found");
-  }
+  // if (!header) {
+  //   throw new Error("No header found");
+  // }
 
-  window.addEventListener("scroll", () => {
-    const hasScrolled = window.scrollY > 0; // Check if the user has scrolled down
+  // window.addEventListener("scroll", () => {
+  //   const hasScrolled = window.scrollY > 0; // Check if the user has scrolled down
 
-    if (window.innerWidth >= 768) {
-      if (hasScrolled) {
-        // User has scrolled - start transitions
-        header.style.top = "0"; // Move the navbar up
-        header.style.backgroundColor = `rgba(0, 0, 0, 1)`; // Make background fully opaque
-        header.style.borderColor = `rgba(255, 255, 255, 1)`; // Adjust border color if needed
-      } else {
-        // User is at the top of the page - reset styles
-        header.style.top = "20px"; // Original position
-        header.style.backgroundColor = `rgba(0, 0, 0, 0)`; // Fully transparent background
-        header.style.borderColor = `rgba(255, 255, 255, 0)`; // Transparent border
-      }
-    } else {
-      // For smaller screens, you might want to keep or adjust these settings
-      header.style.backgroundColor = ""; // Optionally reset for smaller screens
-      header.style.borderColor = "";
-      header.style.top = "";
-    }
-  });
+  //   if (window.innerWidth >= 768) {
+  //     if (hasScrolled) {
+  //       // User has scrolled - start transitions
+  //       header.style.top = "0"; // Move the navbar up
+  //       header.style.backgroundColor = `rgba(0, 0, 0, 1)`; // Make background fully opaque
+  //       header.style.borderColor = `rgba(255, 255, 255, 1)`; // Adjust border color if needed
+  //     } else {
+  //       // User is at the top of the page - reset styles
+  //       header.style.top = "20px"; // Original position
+  //       header.style.backgroundColor = `rgba(0, 0, 0, 0)`; // Fully transparent background
+  //       header.style.borderColor = `rgba(255, 255, 255, 0)`; // Transparent border
+  //     }
+  //   } else {
+  //     // For smaller screens, you might want to keep or adjust these settings
+  //     header.style.backgroundColor = ""; // Optionally reset for smaller screens
+  //     header.style.borderColor = "";
+  //     header.style.top = "";
+  //   }
+  // });
 
   const hamburgerBtn = document.getElementById("hamburger-btn");
   const mobileMenu = document.getElementById("mobile-menu");
