--- a/src/components/Position.astro
+++ b/src/components/Position.astro
@@ -6,22 +6,38 @@ export interface Props {
   location: string;
   years: any;
   description: string;
+  link: string;
 }
 
-const { title, location, years, description } = Astro.props as Props;
+const { title, location, years, description, link } = Astro.props as Props;
 ---
 
 <div class="w-full lg:w-1/2">
-  <div class="flex flex-col gap-1">
-    <div class="flex flex-start">
-      <H3
+  <div class="flex flex-col">
+    <div class="flex flex-start mb-[-2px]">
+      <!-- <H3
         header={title}
         classes="text-lg font-bold"
         hideBracketOnMobile={true}
-      />
+      /> -->
+      <h3>{title}</h3>
     </div>
-    <div><span class="font-bold">{location}</span></div>
-    <div><span class="text-purple">{years}</span></div>
-    <div><span>{description}</span></div>
+    <div class="mb-[1px]">
+      <a href={link}>
+        <span class="font-bold text-lightBlue hover:text-lavendar"
+          >{location}</span
+        ></a
+      >
+    </div>
   </div>
+
+  <div class="mb-3"><span class="text-[15px] italic">{years}</span></div>
+  <div><span><p>{description}</p></span></div>
 </div>
+
+<style>
+  a:hover {
+    text-decoration: underline;
+    text-decoration-color: rgb(190 183 254);
+  }
+</style>
