--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -14,15 +14,24 @@ export interface Props {
 const { header, image, tags, text, link, links } = Astro.props as Props;
 ---
 
+<!-- drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)] -->
 <div class="bg-black rounded-xl p-10">
   <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
-    <div class="lg:col-span-5 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]">
-      <a href={link}>
-        <Image src={image} alt="" class="rounded-lg" width="600" height="450" />
-      </a>
+    <div class="lg:col-span-5">
+      <div class="image-container">
+        <a href={link}>
+          <Image
+            src={image}
+            alt=""
+            class="rounded-lg image"
+            width="600"
+            height="450"
+          />
+        </a>
+      </div>
     </div>
     <div class="lg:col-span-7 flex flex-col gap-4">
-      <h3 class="font-bold">{header}</h3>
+      <h3 class="font-bold text-2xl">{header}</h3>
       <div class="flex flex-row flex-wrap gap-x-4 gap-y-1">
         {
           tags.map((tag, index) => {
@@ -51,7 +60,7 @@ const { header, image, tags, text, link, links } = Astro.props as Props;
         {
           links && (
             <div
-              class={`grid sm:grid-cols-1 text-sm gap-y-2 sm:gap-y-1  ${Object.keys(links).length === 1 ? "flex items-center justify-center h-full pt-0" : ""}`}
+              class={`grid sm:grid-cols-1 text-sm gap-y-2 sm:gap-y-1  ${Object.keys(links).length === 1 ? "flex items-center md:justify-center h-full pt-0" : ""}`}
             >
               {Object.entries(links).map(([text, link]) => {
                 return (
@@ -74,5 +83,25 @@ const { header, image, tags, text, link, links } = Astro.props as Props;
   .secondary-link:hover {
     text-decoration: underline;
     color: lightgrey;
+  }
+
+  .image {
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+    outline: 1px solid;
+    outline-color: rgba(255, 255, 255, 0.5);
+    outline-offset: 0px;
+    transition:
+      all 1250ms cubic-bezier(0.19, 1, 0.22, 1),
+      color 100ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  .image:hover {
+    box-shadow:
+      inset 0 0 20px rgba(255, 255, 255, 0.5),
+      0 0 20px rgba(255, 255, 255, 0.2);
+    outline-color: rgba(255, 255, 255, 0);
+    outline-offset: 15px;
+    transform: scale(1.02);
+    /* text-shadow: 1px 1px 2px #427388; */
   }
 </style>
