--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -8,42 +8,44 @@ import designIcon from "../images/icons/design-icon.png";
 <section>
   <div class="container container-large">
     <div class="padding-global py-20 md:py-36">
-      <div>
-        <div class="flex justify-center">
-          <h2 class="text-center mb-8 max-w-2xl lg:max-w-5xl">
-            I use a holistic skillset of engineering, user behavior, and product
-            strategy to polish ideas to perfection.
-          </h2>
-        </div>
-        <div class="mt-4"></div>
-        <!-- 3 Boxes -->
-        <div class="flex items-center justify-center">
-          <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12"> -->
-          <div
-            class="flex flex-col justify-center md:flex-row md:flex-wrap padding-extra max-w-2xl lg:max-w-none w-full items-center"
-          >
-            <Card
-              header="Front-End Development"
-              text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant digital experiences."
-              icon={codeIcon}
-              classes="lg:pr-6 lg:w-1/2 xl:w-1/3 h-full"
-            />
-            <Card
-              header="User-Experience Design"
-              text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
-              icon={designIcon}
-              classes="lg:px-3 lg:w-1/2 xl:w-1/3 h-full"
-            />
-            <Card
-              header="Data-Driven Optimization"
-              text="I make analytics-based improvements that boost KPIs and increase conversions by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
-              icon={dataIcon}
-              classes="lg:pl-6 lg:w-1/2 xl:w-1/3 h-full"
-            />
+      <div class="padding-extra">
+        <div>
+          <div class="flex justify-center">
+            <h2 class="text-center mb-8 max-w-2xl lg:max-w-5xl">
+              I use a holistic skillset of engineering, user behavior, and
+              product strategy to polish ideas to perfection.
+            </h2>
           </div>
-        </div>
+          <div class="mt-4"></div>
+          <!-- 3 Boxes -->
+          <div class="flex justify-center items-stretch">
+            <!-- <div class="grid grid-cols-1 lg:grid-cols-3"> -->
+            <div
+              class="flex flex-col justify-center xl:flex-row items-center gap-6"
+            >
+              <Card
+                header="Front-End Development"
+                text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant digital experiences."
+                icon={codeIcon}
+                classes="w-full md:w-2/3 xl:w-1/3"
+              />
+              <Card
+                header="User-Experience Design"
+                text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
+                icon={designIcon}
+                classes="w-full md:w-2/3 xl:w-1/3"
+              />
+              <Card
+                header="Data-Driven Optimization"
+                text="I make analytics-based improvements that boost KPIs and increase conversions by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
+                icon={dataIcon}
+                classes="w-full md:w-2/3 xl:w-1/3"
+              />
+            </div>
+          </div>
 
-        <!--
+          <!-- classes="lg:pl-6 lg:w-1/2 xl:w-1/3 h-full" -->
+          <!--
         V-SHAPED LAYOUT
         <div>
         <div class="flex flex-wrap items-center justify-center gap-12">
@@ -64,6 +66,7 @@ import designIcon from "../images/icons/design-icon.png";
           />
         </div>
       </div> -->
+        </div>
       </div>
     </div>
   </div>
